# includeigen

./: LICENSE  MANIFEST.in  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/includeigen/: __init__.py
tests/: test_package.py
